Consolidate password reset system - keep working SMS-based system, remove non-working phone-based system

--- a/login-no-inline.html
+++ b/login-no-inline.html
@@ -210,7 +210,7 @@
                     <input type="checkbox" id="rememberMe" name="rememberMe">
                     <label for="rememberMe">Remember me</label>
                 </div>
-                <a href="forgot-password-sms.html" class="forgot-password">
+                <a href="forgot-password.html" class="forgot-password">
                     <i class="fas fa-key"></i> Reset Password
                 </a>
             </div>
@@ -263,7 +263,7 @@
         </div>
 
         <div class="forgot-password">
-            <a href="phone-password-reset-request.html" class="forgot-link">Forgot your password?</a>
+            <a href="forgot-password.html" class="forgot-link">Forgot your password?</a>
         </div>
 
         <div class="divider">
