--- a/verify-reset-otp.html
+++ b/verify-reset-otp.html
@@ -320,7 +320,7 @@
         </div>
 
         <div class="verify-links">
-            <a href="forgot-password-sms.html"><i class="fas fa-arrow-left"></i> Use Different Number</a>
+            <a href="login.html"><i class="fas fa-arrow-left"></i> Back to Login</a>
         </div>
     </div>
 
