Fix API URLs across all password reset files to use correct production URL

--- a/set-new-password.html
+++ b/set-new-password.html
@@ -377,8 +377,8 @@
     <script>
         // API Configuration
         const API_URL = window.location.hostname === 'localhost'
-            ? 'http://localhost:5003'
-            : 'https://zimcrowd-backend-lxy6yykq0-jojola.vercel.app';
+            ? 'http://localhost:3000'
+            : 'https://zimcrowd-backend-4k00rf81q-jojola.vercel.app';
 
         // Get phone and token from URL or localStorage
         const urlParams = new URLSearchParams(window.location.search);
@@ -395,7 +395,7 @@
 
         if (!phone || !resetToken) {
             // Missing required data, redirect back
-            window.location.href = 'forgot-password-sms.html';
+            window.location.href = 'forgot-password.html';
         }
 
         // Password toggle function
