--- a/verify-reset-otp.html
+++ b/verify-reset-otp.html
@@ -327,8 +327,8 @@
     <script>
         // API Configuration
         const API_URL = window.location.hostname === 'localhost'
-            ? 'http://localhost:5003'
-            : 'https://zimcrowd-backend-jtpec7w90-jojola.vercel.app';
+            ? 'http://localhost:3000'
+            : 'https://zimcrowd-backend-4k00rf81q-jojola.vercel.app';
             
         console.log('🌐 API_URL:', API_URL);
 
@@ -344,7 +344,7 @@
 
         if (!phone) {
             // No phone number, redirect back
-            window.location.href = 'forgot-password-sms.html';
+            window.location.href = 'forgot-password.html';
         } else {
             // Display phone number
             document.getElementById('phoneDisplay').textContent = phone;
