--- a/login.html
+++ b/login.html
@@ -475,21 +475,86 @@
             -webkit-backdrop-filter: blur(10px);
         }
 
-        @media (max-width: 480px) {
-            .login-container {
-                padding: 30px 20px;
-                margin: 20px;
-                max-width: none;
-            }
+        /* Social Login Styles */
+        .social-login {
+            display: flex;
+            flex-direction: column;
+            gap: 12px;
+            margin: 24px 0;
+        }
 
-            .login-header h1 {
-                font-size: 28px;
-            }
+        .social-btn {
+            width: 100%;
+            padding: 14px 20px;
+            border: none;
+            border-radius: 12px;
+            font-size: 16px;
+            font-weight: 500;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 12px;
+            backdrop-filter: blur(10px);
+            -webkit-backdrop-filter: blur(10px);
+            position: relative;
+            overflow: hidden;
+        }
 
-            .signup-prompt {
-                flex-direction: column;
-                gap: 12px;
-            }
+        .social-btn::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: -100%;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.1), transparent);
+            transition: left 0.5s;
+        }
+
+        .social-btn:hover::before {
+            left: 100%;
+        }
+
+        .google-btn {
+            background: rgba(255, 255, 255, 0.2);
+            color: rgba(255, 255, 255, 0.95);
+            border: 2px solid rgba(255, 255, 255, 0.3);
+            font-weight: 600;
+        }
+
+        .google-btn:hover {
+            background: rgba(255, 255, 255, 0.3);
+            color: white;
+            border-color: rgba(255, 255, 255, 0.5);
+            transform: translateY(-2px);
+            box-shadow: 0 4px 12px rgba(255, 255, 255, 0.2);
+        }
+
+        .google-btn i {
+            color: #ea4335;
+            font-size: 18px;
+        }
+
+        .facebook-btn {
+            background: rgba(66, 103, 178, 0.2);
+            color: rgba(255, 255, 255, 0.95);
+            border: 2px solid rgba(66, 103, 178, 0.4);
+            font-weight: 600;
+        }
+
+        .facebook-btn:hover {
+            background: rgba(66, 103, 178, 0.3);
+            color: white;
+            border-color: rgba(66, 103, 178, 0.6);
+            transform: translateY(-2px);
+            box-shadow: 0 4px 12px rgba(66, 103, 178, 0.3);
+        }
+
+        .facebook-btn i {
+            color: #4267b2;
+            font-size: 18px;
         }
     </style>
 </head>
@@ -602,6 +667,18 @@
 
         <div class="forgot-password">
             <a href="phone-password-reset-request.html" class="forgot-link">Forgot your password?</a>
+        </div>
+
+        <!-- Social Login Buttons -->
+        <div class="social-login">
+            <button type="button" class="social-btn google-btn" onclick="loginWithGoogle()">
+                <i class="fab fa-google"></i>
+                <span>Continue with Google</span>
+            </button>
+            <button type="button" class="social-btn facebook-btn" onclick="loginWithFacebook()">
+                <i class="fab fa-facebook-f"></i>
+                <span>Continue with Facebook</span>
+            </button>
         </div>
 
         <div class="divider">
@@ -943,6 +1020,29 @@
                 passwordInput.type = 'password';
                 icon.classList.remove('fa-eye-slash');
                 icon.classList.add('fa-eye');
+            }
+        }
+
+        // Social login functions
+        async function loginWithGoogle() {
+            try {
+                showSuccess('Redirecting to Google...');
+                // Redirect to our backend OAuth endpoint
+                window.location.href = '/api/social-auth/google';
+            } catch (error) {
+                console.error('Google login error:', error);
+                showError('Failed to initiate Google login. Please try again.');
+            }
+        }
+
+        async function loginWithFacebook() {
+            try {
+                showSuccess('Redirecting to Facebook...');
+                // Redirect to our backend OAuth endpoint
+                window.location.href = '/api/social-auth/facebook';
+            } catch (error) {
+                console.error('Facebook login error:', error);
+                showError('Failed to initiate Facebook login. Please try again.');
             }
         }
     </script>
