Fix API URLs in password reset pages to use correct backend domain

--- a/phone-password-reset-request.html
+++ b/phone-password-reset-request.html
@@ -233,7 +233,7 @@
 
                 try {
                     // Call the API to send reset code
-                    const response = await fetch('/api/phone-auth/forgot-password-phone', {
+                    const response = await fetch('https://zimcrowd-backend.vercel.app/api/phone-auth/forgot-password-phone', {
                         method: 'POST',
                         headers: {
                             'Content-Type': 'application/json',
