--- a/phone-password-reset-new.html
+++ b/phone-password-reset-new.html
@@ -381,7 +381,7 @@
                 submitSpinner.style.display = 'inline-block';
 
                 try {
-                    const response = await fetch('/api/phone-auth/reset-password-phone', {
+                    const response = await fetch('https://zimcrowd-backend.vercel.app/api/phone-auth/reset-password-phone', {
                         method: 'POST',
                         headers: {
                             'Content-Type': 'application/json',
