--- a/phone-password-reset-verify.html
+++ b/phone-password-reset-verify.html
@@ -312,7 +312,7 @@
                 verifySpinner.style.display = 'inline-block';
 
                 try {
-                    const response = await fetch('/api/phone-auth/verify-reset-otp', {
+                    const response = await fetch('https://zimcrowd-backend.vercel.app/api/phone-auth/verify-reset-otp', {
                         method: 'POST',
                         headers: {
                             'Content-Type': 'application/json',
@@ -357,7 +357,7 @@
                 resendBtn.textContent = 'Sending...';
 
                 try {
-                    const response = await fetch('/api/phone-auth/resend-phone-otp', {
+                    const response = await fetch('https://zimcrowd-backend.vercel.app/api/phone-auth/resend-phone-otp', {
                         method: 'POST',
                         headers: {
                             'Content-Type': 'application/json',
