Complete comprehensive registration system with next of kin details, validation, and persistent red completion card

--- a/dashboard.html
+++ b/dashboard.html
@@ -4675,12 +4675,12 @@
                     <div class="chat-messages" id="chatMessages">
                         <div class="message-bubble">
                             <p>Hello! I'm Kairo, your AI financial assistant. I can help you with:</p>
-                            <ul style="margin: 10px 0 0 20px;">
-                                <li>Check your ZimScore</li>
-                                <li>View loan details</li>
-                                <li>Investment recommendations</li>
-                                <li>Payment reminders</li>
-                                <li>Market insights</li>
+                            <ul style="text-align: left; margin: 15px 0; padding-left: 20px;">
+                                <li style="margin: 5px 0;">✓ Personal profile information</li>
+                                <li style="margin: 5px 0;">✓ Next of kin details</li>
+                                <li style="margin: 5px 0;">✓ Identity documents upload</li>
+                                <li style="margin: 5px 0;">✓ Employment details verification</li>
+                                <li style="margin: 5px 0;">✓ Payment method setup</li>
                             </ul>
                             <p style="margin-top: 10px;">How can I assist you today?</p>
                         </div>
