--- a/forgot-password.html
+++ b/forgot-password.html
@@ -38,7 +38,7 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background: linear-gradient(135deg, rgba(25, 26, 35, 0.9) 0%, rgba(56, 224, 123, 0.1) 100%);
+            background: linear-gradient(135deg, rgba(25, 26, 35, 0.92) 0%, rgba(56, 231, 123, 0.15) 100%);
             z-index: 0;
         }
 
@@ -142,9 +142,9 @@
 
         .form-input:focus {
             outline: none;
-            border-color: rgba(56, 224, 123, 0.4);
+            border-color: rgba(56, 231, 123, 0.6);
             background: rgba(255, 255, 255, 0.12);
-            box-shadow: 0 0 0 3px rgba(56, 224, 123, 0.15);
+            box-shadow: 0 0 0 4px rgba(56, 231, 123, 0.2), 0 0 20px rgba(56, 231, 123, 0.3);
             color: white;
         }
 
@@ -191,15 +191,17 @@
         }
 
         .forgot-links a {
-            color: rgba(56, 224, 123, 0.9);
+            color: #38e77b;
             text-decoration: none;
             font-size: 14px;
             font-weight: 500;
             transition: all 0.3s ease;
+            text-shadow: 0 0 10px rgba(56, 231, 123, 0.3);
         }
 
         .forgot-links a:hover {
-            color: var(--color-green);
+            color: #34d399;
+            text-shadow: 0 0 15px rgba(56, 231, 123, 0.5);
         }
 
         .forgot-footer {
@@ -212,14 +214,16 @@
         }
 
         .forgot-footer a {
-            color: rgba(56, 224, 123, 0.9);
+            color: #38e77b;
             text-decoration: none;
             font-weight: 500;
             transition: all 0.3s ease;
+            text-shadow: 0 0 10px rgba(56, 231, 123, 0.3);
         }
 
         .forgot-footer a:hover {
-            color: var(--color-green);
+            color: #34d399;
+            text-shadow: 0 0 15px rgba(56, 231, 123, 0.5);
         }
 
         .message {
