--- a/set-new-password.html
+++ b/set-new-password.html
@@ -38,7 +38,7 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background: linear-gradient(135deg, rgba(25, 26, 35, 0.9) 0%, rgba(56, 224, 123, 0.1) 100%);
+            background: linear-gradient(135deg, rgba(25, 26, 35, 0.92) 0%, rgba(56, 231, 123, 0.15) 100%);
             z-index: 0;
         }
 
@@ -147,9 +147,9 @@
 
         .form-input:focus {
             outline: none;
-            border-color: rgba(56, 224, 123, 0.4);
+            border-color: rgba(56, 231, 123, 0.6);
             background: rgba(255, 255, 255, 0.12);
-            box-shadow: 0 0 0 3px rgba(56, 224, 123, 0.15);
+            box-shadow: 0 0 0 4px rgba(56, 231, 123, 0.2), 0 0 20px rgba(56, 231, 123, 0.3);
             color: white;
         }
 
@@ -172,7 +172,8 @@
         }
 
         .toggle-password:hover {
-            color: var(--color-green);
+            color: #38e77b;
+            filter: drop-shadow(0 0 8px rgba(56, 231, 123, 0.5));
         }
 
         .password-strength {
@@ -232,7 +233,8 @@
         }
 
         .requirement.met {
-            color: var(--color-green);
+            color: #38e77b;
+            text-shadow: 0 0 10px rgba(56, 231, 123, 0.3);
         }
 
         .requirement i {
